fixed fieldset name

--- a/quote.html
+++ b/quote.html
@@ -11,7 +11,7 @@
     </section>
     <section id="form">
       <div id="basicInfo">
-        <form id="cookieshopbuild">
+        <form id="basicForm">
           <fieldset>
             <legend>Let's get to know you</legend>
             <label for="fName">First Name: </label><br/>
