--- a/quote.html
+++ b/quote.html
@@ -9,10 +9,14 @@
     </header>
     <section id="intro">
     </section>
-    <section id="form">
+    <section id="forms">
       <div id="basicInfo">
+        <form action="" id="user">
+        </form>
       </div>
       <div id="projectInfo">
+        <form action="" id="project">
+        </form>
       </div>
     </section>
     <section id="proposal">
