--- a/quote.html
+++ b/quote.html
@@ -33,13 +33,13 @@
           <fieldset>
             <legend>What can we help you with?</legend>
             <label>Project Type:</label><br/>
-            <input type="radio" name="projectType" value="basic"><label for="projectType" required>Basic 5 Page Website</label>
-            <input type="radio" name="projectType" value="eCommerce"><label for="projectType" required>eCommerce Website (5 products)</label><br/>
+            <input type="radio" name="projectType" value="basic" id="basic" required><label for="basic">Basic 5 Page Website</label>
+            <input type="radio" name="projectType" value="eCommerce" id="projectType" required><label for="projectType">eCommerce Website (5 products)</label><br/>
             <label for="pages">Number of extra pages</label>
-            <input type="number" name="pages" required><br/>
+            <input type="number" name="pages" id="pages" required><br/>
             <label for="products">Number of extra prodcuts</label>
-            <input type="products" name="products"></br>
-            <input type="checkbox" name="rush" value="rush"><label for="rush">Is this a rush order?</label><br/>
+            <input type="products" name="products" id="products"><br/>
+            <input type="checkbox" name="rush" value="rush" id="rush"><label for="rush">Is this a rush order?</label><br/>
             <button type="submit">Generate my quote</button>
           </fieldset>
         </form>
