check box is working!

--- a/quote.html
+++ b/quote.html
@@ -39,7 +39,7 @@
             <input type="number" name="pages" id="pages" required><br/>
             <label for="products">Number of extra prodcuts</label>
             <input type="products" name="products" id="products"><br/>
-            <input type="checkbox" name="rush" checked="rush" id="rush"><label for="rush">Is this a rush order?</label><br/>
+            <input type="checkbox" name="rush" id="rush" value="rush"><label for="rush">Is this a rush order?</label><br/>
             <button type="submit">Generate my quote</button>
           </fieldset>
         </form>
