added start and end date cal to form in .html and .js

--- a/quote.html
+++ b/quote.html
@@ -24,6 +24,10 @@
             <input type="text" name="email" /><br/>
             <label for="phone">Phone: </label><br/>
             <input type="text" name="phone" /><br/>
+            <label for="sDate">Enter a start date: </label>
+            <input type="date" name="sDate" min="2017-01-01"><br>
+            <label for="eDate">Enter an end date: </label>
+            <input type="date" name="eDate" min="2017-01-01"><br>
             <button type="submit" name="submit" value="submit">Lets Go!</button>
           </fieldset>
         </form>
