started creating function to populate the final proposal

--- a/quote.html
+++ b/quote.html
@@ -25,7 +25,7 @@
             <label for="phone">Phone: </label><br/>
             <input type="text" name="phone" /><br/>
             <label for="sDate">Enter a start date: </label>
-            <input type="date" name="sDate" min="2017-01-01"><br>
+            <input type="date" name="sDate" min="2017-09-15" id="sDate"><br>
             <label for="eDate">Enter an end date: </label>
             <input type="date" name="eDate" min="2017-01-01"><br>
             <button type="submit" name="submit" value="submit">Lets Go!</button>
