--- a/quote.html
+++ b/quote.html
@@ -49,6 +49,38 @@
       <div id="about">
       </div>
       <div id="breakdown">
+      <h2>Select your features below and we'll give you an instant estimate.</h2>
+        <h2>Strategy:</h2>
+        <ul>
+          <li>We receive your information and will schedule a follow up call to go over any questions about our service. At this time we will discuss your goals, site design, brand concerns, and responsive options.</li>
+          <li>We will request any brand work, images, copy, and inspirational examples of styles you like to begin our wireframing process.</li>
+          <li>Next, we will send over a site layout and request approval or revisions at this time.</li>
+          <li>Over the next few weeks we will work on building your site and submit a final draft for your review.</li>
+          <li>Once the final site review (includes up to 2 revisions) is completed, we will make any revisions.</li>
+          <li>Website is ready to go live, hooray!!</li>
+        </ul>
+        <h2>Timeline:</h2>
+        <ul>
+          <li>Basic Website: 8 weeks</li>
+          <li>eCommerce Website: 24 weeks</li>
+        </ul>
+        <h1>How Much Should a Website Cost, Anyway?</h1>
+        <p>Prices for websites vary quite a bit depending on what features you would like, but they do fall within a general range.</p>
+        <h2>Basic custom-designed websites (5 pages): $5,000</h2>
+          <p>This option is best for designing a simple site from scratch. Your custom wb design package will include a responsive design to fit  your site automatically for mobile and tablet.</p>
+        <h2>Complex eCommerce sites (10 pages + first 5 products): $15,000</h2>
+          <p>This option is best for small businesses and clients who sell a service or product and require custom functionality for an online store. If you would like a high-quality custom built site with eCommerce functionality then this is the package for you!</p>
+        <h2>We Would Like You to Provide:</h2>
+        <ul>
+          <li>Web hosting, domain registration, SSI certificate, WHOIS Guard or similar subscription service</li>
+          <li>Website copy and images (with licenses)</li>
+          <li>Licenses or subscriptions for premium services per client request</li>
+        </ul>
+        <h1>Add Ons</h1>
+        <h2>Extra Pages:</h2>
+          <p>Additional pages cost $150 each (minimum of 5)</p>
+        <h2>Extra Products:</h2>
+          <p>Additional products cost $150 each (minimum of 5)</p>
       </div>
       <div id="nextSteps">
       </div>
