mobile nav is working

--- a/about.html
+++ b/about.html
@@ -13,16 +13,18 @@
     <link rel="shortcut icon" type="image/png" href="img/design-worth-favicon.ico">
   </head>
   <body>
-    <header id="header" class="navcontainer">
-        <img class="navlogo" src="img/desgn-worth-logo.png">
-      <ul class="navlinks">
-        <li><a href="">Home</a></li>
-        <li><a href=""><b>About</b></a></li>
-        <li><a href="">Quote</a></li>
-        <li><a href="">Contact</a></li>
-      </ul>
-    </header>
-
+    <nav class="containter">
+        <img id="navlogo" alt="desgn worth logo" src="img/desgn-worth-logo.png" />
+        <div id="mainTopNav">
+          <button type="button" class="icon" id="hamburger">&#9776;</button>
+          <div id="navLinks" class="topNav navHide">
+              <a href="#">Home</a>
+              <a href="#">About</a>
+              <a href="#">Quote</a>
+              <a href="#">Contact</a>
+          </div>
+        </div>
+      </nav>
     <section id="section1">
       <h2 class="bannerquote">"The biggest mistake a small business can make is to think like a small business." - Postfilm Design</h2>
     </section>
@@ -66,6 +68,6 @@
     <div id="footer">
       <p>&copy; Copyright 2017</p>
     </div>
-    <script type="app.js"></script>
+    <script type="text/javascript" src="navigation.js"></script>
   </body>
 </html>
