--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
           <button type="button" class="icon" id="hamburger">&#9776;</button>
           <div id="navLinks" class="topNav navHide">
               <a href="#">Home</a>
-              <a href="#">About</a>
+              <a href="#">About Us</a>
               <a href="#">Quote</a>
               <a href="#">Contact</a>
           </div>
