nav is responsive

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Design Worth</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <!-- Body font -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Ubuntu" rel="stylesheet">
     <!-- Heading font -->
@@ -13,8 +15,8 @@
     <link rel="shortcut icon" type="image/png" href="img/design-worth-favicon.ico">
   </head>
   <body>
-    <nav class="containter">
-        <img id="navlogo" alt="desgn worth logo" src="img/desgn-worth-logo.png" />
+    <nav>
+        <img id="navLogo" alt="desgn worth logo" src="img/desgn-worth-logo.png" />
         <div id="mainTopNav">
           <button type="button" class="icon" id="hamburger">&#9776;</button>
           <div id="navLinks" class="topNav navHide">
