pages linked for about us navigation section

--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
         <div id="mainTopNav">
           <button type="button" class="icon" id="hamburger">&#9776;</button>
           <div id="navLinks" class="topNav navHide">
-              <a href="#">Home</a>
-              <a href="#">About Us</a>
+              <a href="index.html">Home</a>
+              <a href="about.html">About Us</a>
               <a href="#">Quote</a>
-              <a href="#">Contact</a>
+              <a href="contact.html">Contact</a>
           </div>
         </div>
     </nav>
