all pages linked and navigation js added to each html

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
           <div id="navLinks" class="topNav navHide">
               <a href="index.html">Home</a>
               <a href="about.html">About Us</a>
-              <a href="#">Quote</a>
+              <a href="quote.html">Quote</a>
               <a href="contact.html">Contact</a>
           </div>
         </div>
