--- a/index.html
+++ b/index.html
@@ -28,46 +28,43 @@
           </div>
         </div>
       </nav>
-      <div class="logo">
-
-      </div>
     </header>
 
     <section>
     <div class="copy">
 
     </div>
-    <button type="button" name="button">CTA</button>
+    <button type="button" name="button">Get your instant quote today!</button>
   </section>
 
   <section>
     <div class="aboutIQ">
-
+      <p>A write up about our app</p>
     </div>
   </section>
 
   <section>
     <img src="" alt="">
     <div class="test">
-
+      <p>testimonial will go here</p>
     </div>
   </section>
 
   <section>
     <div class="team">
-
+      <p>A little info about our team will go here</p>
     </div>
   </section>
 
   <section>
     <img src="" alt="">
     <div class="test">
-
+      <p>testimonial will go here</p>
     </div>
   </section>
   <footer>
-    <button type="button" name="button">CTA</button>
-    <p>&copy; Desgn Worth</p>
+    <button type="button" name="button">Get your instant quote today!</button>
+    <p>&copy; desgn worth</p>
 
 
   </footer>
