--- a/about.html
+++ b/about.html
@@ -22,11 +22,9 @@
         <li><a href="">Contact</a></li>
       </ul>
     </header>
-
     <section id="section1">
       <h2 class="bannerquote">"The biggest mistake a small business can make is to think like a small business." - Postfilm Design</h2>
     </section>
-
     <section id="section2">
       <h1>About Desgn Worth</h1>
         <ul>
@@ -66,6 +64,11 @@
       </div>
     </div>
     </section>
+    <div class="testimonial">
+      <img class="img-circle" id="secondperson"  src="img/happy-person2.jpg">
+      <p id="testwords">"Great experience. Had to get a website created to sell my products and fast. Did a lot of shopping around and decided to get a quote. Chris reached out to me personally via email and communicated the quote and answers to my questions in great detail. Great work guys!"</p>
+      <div id="testimonialname"><p><b>- Mr. Goodtimes</b></p></div>
+    </div>
     <div id="footer">
       <p>&copy; Copyright Desgn Worth 2017</p>
     </div>
