filled in homepage info - no css

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <div id="main_contact">
       <h1>Contact Us</h1>
       <div id="contact_form"></div>
-      <script type="text/javascript" src="contact.js></script>
+      <script type="text/javascript" src="contact.js"></script>
     </div>
   </body>
 </html>
