--- a/index.html
+++ b/index.html
@@ -39,27 +39,32 @@
 
   <section>
     <div class="aboutIQ">
-      <p>A write up about our app</p>
+      <p>Our app makes quotes easy for you and your clients! Our online fomr is quick and pain free, it guides your clients through a step by step process and asks them the questions you need to know to generate a quote. Once the form is filled out, your client will press submit and will automatically be able to review their quote. At the same time, you will receive your clients info and will be able to schedule a follow up call.</p>
     </div>
   </section>
 
   <section>
     <img src="" alt="">
     <div class="test">
-      <p>testimonial will go here</p>
+      <p>Desgn Worth is a perfect fit for my company! I run a web developing company in Seattle and I don't have enough time to generate quotes on my own time. All I had to do was plug in my specific prices and plug-in the code into my site and I was up in running. Now I have more time to create the websites that I want to desgin. Desgn Worth was worth my time!<br>
+        - Mr. Aubrey Drake Graham
+      </p>
     </div>
   </section>
 
   <section>
     <div class="team">
-      <p>A little info about our team will go here</p>
+      <img src="" alt="desgn worth team photo">
+      <p>We are Desgn Worth</p>
     </div>
   </section>
 
   <section>
     <img src="" alt="">
     <div class="test">
-      <p>testimonial will go here</p>
+      <p>I couldn't ask for a better app! It is quick and easy to set up and deploy. I have heard nothing but good feedback from my clients. <br>
+        - Ms. Onika Tanya Maraj
+      </p>
     </div>
   </section>
   <footer>
