--- a/about.html
+++ b/about.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <title>Design Worth</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/normalize.css">
     <!-- Body font -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Ubuntu" rel="stylesheet">
     <!-- Heading font -->
@@ -15,18 +13,15 @@
     <link rel="shortcut icon" type="image/png" href="img/design-worth-favicon.ico">
   </head>
   <body>
-    <nav>
-        <img id="navLogo" alt="desgn worth logo" src="img/desgn-worth-logo.png"/>
-        <div id="mainTopNav">
-          <button type="button" class="icon" id="hamburger">&#9776;</button>
-          <div id="navLinks" class="topNav navHide">
-              <a href="index.html">Home</a>
-              <a href="about.html">About Us</a>
-              <a href="quote.html">Quote</a>
-              <a href="contact.html">Contact</a>
-          </div>
-        </div>
-    </nav>
+    <header id="header" class="navcontainer">
+        <img class="navlogo" src="img/desgn-worth-logo.png">
+      <ul class="navlinks">
+        <li><a href="">Home</a></li>
+        <li><a href=""><b>About</b></a></li>
+        <li><a href="">Quote</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </header>
     <section id="section1">
       <h2 class="bannerquote">"The biggest mistake a small business can make is to think like a small business." - Postfilm Design</h2>
     </section>
@@ -77,7 +72,7 @@
     <div id="footer">
       <p>&copy; Copyright Desgn Worth 2017</p>
     </div>
-    <script type="text/javascript" src="navigation.js"></script>
+    <script type="app.js"></script>
   </body>
   
 </html>
