linked buttons to quote.html

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
     <div class="copy">
 
     </div>
-    <button type="button" name="button">Get your instant quote today!</button>
+    <form action="quote.html">
+    <input type="submit" value="Get your instant quote today!" />
+    </form>
   </section>
 
   <section>
     <div class="aboutIQ">
-      <p>Our app makes quotes easy for you and your clients! Our online fomr is quick and pain free, it guides your clients through a step by step process and asks them the questions you need to know to generate a quote. Once the form is filled out, your client will press submit and will automatically be able to review their quote. At the same time, you will receive your clients info and will be able to schedule a follow up call.</p>
+      <p>Our app makes quotes easy for you and your clients! Our online form is quick and pain free, it guides your clients through a step by step process and asks them the questions you need to know to generate a real, professional quote. Once the form is filled out, your client will automatically be able to review their quote. At the same time, you will receive your clients info and will be able to schedule a follow up call.</p>
     </div>
   </section>
 
@@ -68,10 +70,10 @@
     </div>
   </section>
   <footer>
-    <button type="button" name="button">Get your instant quote today!</button>
-    <p>&copy; desgn worth</p>
-
-
+    <form action="quote.html">
+    <input type="submit" value="Get your instant quote today!" />
+    </form>
+    <p>&copy;Copyright desgn worth 2017</p>
   </footer>
   <script type="text/javascript" src="navigation.js"></script>
   </body>
