--- a/quote.html
+++ b/quote.html
@@ -19,6 +19,8 @@
           <p>Additional pages cost $150 each (minimum of 5)</p>
         <h2>Extra Products:</h2>
           <p>Additional products cost $150 each (minimum of 5)</p>
+        <h2>Rush Orders:</h2>
+          <p>Twice as fast, but twice as expensive.</p>
     <h2>Ready to get your Quote? Enter your details below and we'll give you an instant estimate.</h2>
     <h2>Timeline:</h2>
     <ul>
@@ -94,6 +96,7 @@
       </div>
     </section>
     <footer>
+      <p>&copy; Copyright 2017</p>
     </footer>
     <script type="text/javascript" src="quote.js"></script>
   </body>
