populates proposal with header and client name; about us section added to proposal

--- a/quote.html
+++ b/quote.html
@@ -90,7 +90,12 @@
       </div>
     </section>
     <section id="proposal">
+      <div id="client-project">
+        <h2>Project: <span id="project-title"></span></h2><br>
+        <h3>Client: <span id="client-name"></span></h3>
+      </div>
       <div id="about">
+        <p>Desgn Worth truly values you as a client and we are committed to delivering on-time, quality results. It is our goal as a team to ensure that you are completely satisfied with your project and that it fulfills the needs of your business. We are continually driven by the idea that our work is "for freelancers, by freelancers" and look forward to building your project!</p>
       </div>
       <div id="breakdown">
         <h2>Strategy:</h2>
@@ -118,7 +123,7 @@
       </div>
     </section>
     <footer>
-      <p>&copy; Copyright 2017</p>
+      <p>&copy; Desgn Worth 2017</p>
     </footer>
     <script type="text/javascript" src="quote.js"></script>
     <script type="text/javascript" src="navigation.js"></script>
