styling for homepage(index.html)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="index.css">
     <!-- Body font -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Ubuntu" rel="stylesheet">
     <!-- Heading font -->
@@ -30,49 +31,45 @@
       </nav>
     </header>
 
-    <section>
-    <div class="copy">
+    <section id="tagline">
+      <p id="taglinetext">Try our app for sending out quotes to your potential clients instantly without any extra work on your part!</p>
+      <a href="quote.html"> <button class="cta">Get Your Instant Quote Today!</button></a>
+    </section>
 
-    </div>
-    <form action="quote.html">
-    <input type="submit" value="Get your instant quote today!" />
-    </form>
+  <section class="bodycopy">
+      <p id="aboutText">Our app makes quotes easy for you and your clients! Our online form is quick and pain free, it guides your clients through a step by step process and asks them the questions you need to know to generate a real, professional quote. Once the form is filled out, your client will automatically be able to review their quote. At the same time, you will receive your clients info and will be able to schedule a follow up call.</p>
   </section>
 
   <section>
-    <div class="aboutIQ">
-      <p>Our app makes quotes easy for you and your clients! Our online form is quick and pain free, it guides your clients through a step by step process and asks them the questions you need to know to generate a real, professional quote. Once the form is filled out, your client will automatically be able to review their quote. At the same time, you will receive your clients info and will be able to schedule a follow up call.</p>
-    </div>
-  </section>
-
-  <section>
-    <img src="" alt="">
     <div class="test">
+      <img class="img-circle" id="drake"  src="img/drake.png">
       <p>Desgn Worth is a perfect fit for my company! I run a web developing company in Seattle and I don't have enough time to generate quotes on my own time. All I had to do was plug in my specific prices and plug-in the code into my site and I was up in running. Now I have more time to create the websites that I want to desgin. Desgn Worth was worth my time!<br>
         - Mr. Aubrey Drake Graham
       </p>
     </div>
   </section>
 
-  <section>
-    <div class="team">
+  <section class="bodycopy">
+    <div id="team">
       <img src="" alt="desgn worth team photo">
       <p>We are Desgn Worth</p>
     </div>
   </section>
 
   <section>
-    <img src="" alt="">
     <div class="test">
+      <img class="img-circle" id="drake"  src="img/nicki.png">
       <p>I couldn't ask for a better app! It is quick and easy to set up and deploy. I have heard nothing but good feedback from my clients. <br>
         - Ms. Onika Tanya Maraj
       </p>
     </div>
   </section>
+  <section class="lastcta">
+
+  <a href="quote.html"> <button class="cta">Get Your Instant Quote Today!</button></a>
+
+</section>
   <footer>
-    <form action="quote.html">
-    <input type="submit" value="Get your instant quote today!" />
-    </form>
     <p>&copy;Copyright desgn worth 2017</p>
   </footer>
   <script type="text/javascript" src="navigation.js"></script>
