--- a/index.html
+++ b/index.html
@@ -53,11 +53,8 @@
       </p>
   </section>
 
-  <section class="bodycopy">
-    <div id="team">
-      <img src="" alt="desgn worth team photo">
-      <p>We are Desgn Worth</p>
-    </div>
+  <section id="team">
+      <p class="teamText">We are Desgn Worth</p>
   </section>
 
   <section class="test">
