--- a/quote.html
+++ b/quote.html
@@ -65,9 +65,9 @@
             <label for="phone">Phone: </label><br/>
             <input type="text" name="phone" /><br/>
             <label for="sDate">Enter a start date: </label>
-            <input type="date" name="sDate" min="2017-11-11" id="sDate"><br>
+            <input type="date" name="sDate" min="" id="sDate"><br>
             <label for="eDate">Enter an end date: </label>
-            <input type="date" name="eDate" min="2017-11-18" id="eDate"><br>
+            <input type="date" name="eDate" min="" id="eDate"><br>
             <button type="submit" name="submit" value="submit">Lets Go!</button>
           </fieldset>
         </form>
@@ -93,7 +93,7 @@
       <div id="client-project">
         <h2>Project: <span id="project-title"></span></h2><br>
         <h3>Client: <span id="client-name"></span></h3>
-        <h4>**Proposal expires 1 week from: <span id="valid"></span></h4>
+        <h4>**Proposal expires on: <span id="valid"></span></h4>
       </div>
       <div id="about">
         <p>Desgn Worth truly values you as a client and we are committed to delivering on-time, quality results. It is our goal as a team to ensure that you are completely satisfied with your project and that it fulfills the needs of your business. We are continually driven by the idea that our work is "for freelancers, by freelancers" and look forward to building your project!</p>
