quote page intro section flexbox

--- a/quote.html
+++ b/quote.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <title>Desgn Worth: InvoQuote</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/quote.css">
     <link rel="stylesheet" href="css/hamburgers.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/quote.css">
     <!-- Body font -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Ubuntu" rel="stylesheet">
     <!-- Heading font -->
@@ -39,22 +38,40 @@
       <image id="iqLogo" alt="invoquote logo" src="img/invoquote-logo-dark.png" />
       <h1>How Much Should a Website Cost, Anyway?</h1>
       <p>Prices for websites vary quite a bit depending on what features you would like, but they do fall within a general range.</p>
+      <div class="row">
+        <div class="column">
       <h2>Basic custom-designed websites (5 pages): $5,000</h2>
         <p>This option is best for designing a simple site from scratch. Your custom wb design package will include a responsive design to fit  your site automatically for mobile and tablet.</p>
+      </div>
+      <div class="column">
       <h2>Complex eCommerce sites (10 pages + first 5 products): $15,000</h2>
         <p>This option is best for small businesses and clients who sell a service or product and require custom functionality for an online store. If you would like a high-quality custom built site with eCommerce functionality then this is the package for you!</p>
+      </div>
+      </div>
         <h1>Add Ons</h1>
+        <div class="row">
+          <div class="column">
         <h2>Extra Pages:</h2>
           <p>Additional pages cost $150 each (minimum of 5)</p>
+        </div>
+        <div class="column">
         <h2>Extra Products:</h2>
           <p>Additional products cost $150 each (minimum of 5)</p>
+        </div>
+        <div class="column">
         <h2>Rush Orders:</h2>
           <p>Twice as fast, but twice as expensive.</p>
+        </div>
+        </div>
+        <h1>Base Timeline:</h1>
+        <div class="column">
+        <ul>
+          <li>Basic Website: 8 weeks</li>
+          <li>eCommerce Website: 24 weeks</li>
+        </ul>
+      </div>
     <h2>Ready to get your Quote? Enter your details below and we'll give you an instant estimate.</h2>
-    <h2>Timeline:</h2>
-    <ul>
-      <li>Basic Website: 8 weeks</li>
-      <li>eCommerce Website: 24 weeks</li>
+
     </section>
     <section id="forms" class="tealSection">
       <div id="basicInfo">
