--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Say Hi!</title>
-    <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/contact.css">
     <!-- Body font -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Ubuntu" rel="stylesheet">
     <!-- Heading font -->
@@ -27,36 +27,45 @@
         </div>
       </div>
     </nav>
-    <section id="forms">
-      <div id="contactInfo">
-        <!-- <form id="contactForm" action="mailto:alicialycan@gmail.com" method="post" enctype="text/plain" > -->
-
-        <form id="contactForm" >
-
-          <fieldset>
-            <legend>We'd like to hear from you!</legend>
-            <label for="fName">First Name: </label><br/>
-            <input type="text" name="fName" required="required"/><br/>
-            <label for="lName">Last Name: </label><br/>
-            <input type="text" name="lName" required="required"/><br/>
-            <label for="email">Email: </label><br/>
-            <input type="text" name="email" required="required"/><br/>
-            <label for="phone">Phone: </label><br/>
-            <input type="text" name="phone" /><br/>
-            <label for="message">Message: </label><br/>
-            <input type="text" name="message"/>
-            <button type="submit" id='formButton' value="submit">Send to Desgn Worth</button>
-          </fieldset>
-        </form>
+      <h1>We're always down for a cup of coffee.</h1>
+    <section class="row" id=coffee>
+      <div class="column">
+        <h2>Talk</h2>
+        <h3>206-538-5058<br>
+        email
+        </h3>
+        <h2>Walk</h2>
+        <h3>5439 Invoke Ave.<br>
+        Seattle, WA 98107
+        </h3>
+        <h2>Stalk</h2>
       </div>
+      <div class="column">
+      <form id="contactForm" >
+        <fieldset>
+          <legend>We'd like to hear from you!</legend>
+          <label for="fName">First Name: </label><br>
+          <input type="text" name="fName" required="required"><br>
+          <label for="lName">Last Name: </label><br/>
+          <input type="text" name="lName" required="required"><br>
+          <label for="email">Email: </label><br>
+          <input type="text" name="email" required="required"><br>
+          <label for="phone">Phone: </label><br>
+          <input type="text" name="phone" ><br>
+          <label for="message">Message: </label><br>
+          <input type="text" name="message"><br>
+          <button type="submit" id='formButton' value="submit">Send to Desgn Worth</button>
+        </fieldset>
+      </form>
+      </div>
+    </section>
       <div id='submitMessage'>
         <p>
           Thank you for contacting us! We look forward to reading your message and will reply back within 24 hours.
         </p>
         <p>Cheers!</p>
         <p>The Desgn Worth Team</p>
-        </div>
-    </section>
+      </div>
     <script type="text/javascript" src="contact.js"></script>
     <script type="text/javascript" src="navigation.js"></script>
   </body>
