centering title on proposal

--- a/quote.html
+++ b/quote.html
@@ -110,7 +110,7 @@
     </section>
     <section id="proposal" class="goldSection">
       <div id="client-project">
-        <h2><span id="project-title"></span> Web Design Project Proposal for: <span id="client-name"></span></h2><br>
+        <div id="prop-title-div"><h2><span id="project-title"></span> Web Design Project Proposal for: <span id="client-name"></span></h2></div><br>
         <h3>**Proposal expires on: <span id="valid"></span></h3>
       </div>
       <div id="about">
