centerd cost breakdown title

--- a/quote.html
+++ b/quote.html
@@ -133,7 +133,7 @@
           <li>Website copy and images (with licenses)</li>
           <li>Licenses or subscriptions for premium services per client request</li>
         </ul>
-        <h1>Cost Breakdown</h1>
+        <div id="cost-title"><h1>Cost Breakdown</h1></div>
           <ul id="costBreakdown">
           </ul>
         <h2>Total: <span id="totalCost"></span></h2>
