quote page styling changes and footer in about page

--- a/about.html
+++ b/about.html
@@ -86,6 +86,7 @@
       </div>
     </div>
     <div id="footer">
+      <img id="footerLogo" src="img/desgn-worth-logo.png" />
       <p>&copy; Copyright Desgn Worth 2017</p>
     </div>
     <script src="navigation.js" src="quote.js" src="contnact.js"></script>
