updated footer on quote.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 </section>
   <footer>
-    <p>&copy;Copyright desgn worth 2017</p>
+    <p>&copy; Desgn Worth 2017</p>
   </footer>
   <script type="text/javascript" src="navigation.js"></script>
   </body>
