--- a/quote.html
+++ b/quote.html
@@ -141,9 +141,10 @@
       <div id="nextSteps">
       </div>
     </section>
-    <footer>
+    <div id="footer">
+      <img id="footerLogo" src="img/desgn-worth-logo.png" />
       <p>&copy; Desgn Worth 2017</p>
-    </footer>
+    </div>
     <script type="text/javascript" src="quote.js"></script>
     <script type="text/javascript" src="navigation.js"></script>
   </body>
