--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
     </div>
     <div id="footer">
       <img id="footerLogo" src="img/desgn-worth-logo.png" />
-      <p>&copy; Copyright Desgn Worth 2017</p>
+      <p>&copy; Desgn Worth 2017</p>
     </div>
     <script src="navigation.js" src="quote.js" src="contnact.js"></script>
   </body>
