rearrange files into folders

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Desgn Worth</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/hamburgers.css">
     <link rel="stylesheet" href="css/normalize.css">
@@ -89,6 +89,6 @@
       <img id="footerLogo" src="img/desgn-worth-logo.png" />
       <p>&copy; Copyright Desgn Worth 2017</p>
     </div>
-    <script src="navigation.js" src="quote.js" src="contnact.js"></script>
+    <script src="scripts/navigation.js" type="text/javascript"></script>
   </body>
 </html>
