--- a/quote.html
+++ b/quote.html
@@ -144,7 +144,7 @@
     <footer>
       <p>&copy; Desgn Worth 2017</p>
     </footer>
-    <script type="text/javascript" src="quote.js"></script>
-    <script type="text/javascript" src="navigation.js"></script>
+    <script type="text/javascript" src="scripts/quote.js"></script>
+    <script type="text/javascript" src="scripts/navigation.js"></script>
   </body>
 </html>
