--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
         <p>Cheers!</p>
         <p>The Desgn Worth Team</p>
       </div>
-    <script type="text/javascript" src="contact.js"></script>
-    <script type="text/javascript" src="navigation.js"></script>
+    <script type="text/javascript" src="scripts/contact.js"></script>
+    <script type="text/javascript" src="scripts/navigation.js"></script>
   </body>
 </html>
