--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <nav>
-      <img id="navLogo" alt="desgn worth logo" src="img/desgn-worth-logo.png" />
+      <img id="navLogo" alt="desgn worth logo" src="img/desgn-worth-logo.png">
       <div id="mainTopNav">
         <button type="button" class="icon" id="hamburger">&#9776;</button>
         <div id="navLinks" class="topNav navHide">
@@ -27,9 +27,11 @@
         </div>
       </div>
     </nav>
+    <section id='intro'>
       <h1>We're always down for a cup of coffee.</h1>
+    </section>
     <section class="row" id=coffee>
-      <div class="column">
+      <div id='columnOne' class="column">
         <h2>Talk</h2>
         <h3>206-538-5058<br>
         email
@@ -39,6 +41,10 @@
         Seattle, WA 98107
         </h3>
         <h2>Stalk</h2>
+        <div id='socialLogos'>
+          <img id='instagram' src="img/instagram.png" alt="instagram">
+          <img id='facebook' src="img/facebook.png" alt="facebook">
+        </div>
       </div>
       <div class="column">
       <form id="contactForm" >
