--- a/quote.html
+++ b/quote.html
@@ -98,10 +98,14 @@
             <label>Project Type:</label><br/>
             <input type="radio" name="projectType" value="basic" id="basic" required><label for="basic">Basic 5 Page Website</label><br />
             <input type="radio" name="projectType" value="eCommerce" id="projectType" required><label for="projectType">eCommerce Website (5 products)</label><br/>
+            <input type="radio" name="projectType" value="membership" id="projectType" required><label for="projectType">Membership Website </label><br/>
+            <input type="radio" name="projectType" value="onlineCourse" id="projectType" required><label for="projectType">Online Course Website </label><br/>
             <label for="pages">Number of extra pages</label>
             <input type="number" name="pages" id="pages" required><br/>
             <label for="products">Number of extra prodcuts</label>
             <input type="products" name="products" id="products"><br/>
+            <label for="products">Number of extra Course</label>
+            <input type="products" name="products" id="courses"><br/>
             <input type="checkbox" name="rush" id="rush" value="rush"><label for="rush">Is this a rush order?</label><br/>
             <button type="submit">Generate my quote</button>
           </fieldset>
