adding verbiage for marketing, website review, and maintenance options

--- a/quote.html
+++ b/quote.html
@@ -107,6 +107,10 @@
             <label for="products">Number of extra Course</label>
             <input type="products" name="products" id="courses"><br/>
             <input type="checkbox" name="rush" id="rush" value="rush"><label for="rush">Is this a rush order?</label><br/>
+            <label for="">Would you like to be contacted for:</label><br>
+            <input type="checkbox" name="marketing" value="marketing"> <label for="marketing">Marketing</label>
+            <input type="checkbox" name="reviewManagement" value="reviewManagement"> <label for="reviewManagement">Review Management</label>
+            <input type="checkbox" name="websiteMaintenance" value="websiteMaintenance"> <label for="websiteMaintenance">Website Maintenance</label>
             <button type="submit">Generate my quote</button>
           </fieldset>
         </form>
