updated styling for quote form section

--- a/quote.html
+++ b/quote.html
@@ -109,32 +109,33 @@
       </div>
     </section>
     <section id="proposal" class="goldSection">
+      <div id="prop-letterhead"><img alt="" src="img/design-worth-favicon.ico"></div>
       <div id="client-project">
         <div id="prop-title-div"><h2><span id="project-title"></span> Web Design Project Proposal for: <span id="client-name"></span></h2></div><br>
-        <h3>**Proposal expires on: <span id="valid"></span></h3>
+        <h3 id="expire">**Proposal expires on: <span id="valid"></span></h3>
       </div>
-      <div id="about">
-        <p>Desgn Worth truly values you as a client and we are committed to delivering on-time, quality results. It is our goal as a team to ensure that you are completely satisfied with your project and that it fulfills the needs of your business. We are continually driven by the idea that our work is "for freelancers, by freelancers" and look forward to building your project!</p>
+      <div class="about-div" id="about-div">
+        <p id="about"><span id="name-italic">Desgn Worth</span> truly values you as a client and we are committed to delivering on-time, quality results. It is our goal as a team to ensure that you are completely satisfied with your project and that it fulfills the needs of your business. We are continually driven by the idea that our work is "for freelancers, by freelancers" and look forward to building your project!</p>
       </div>
       <div id="breakdown">
         <h2>Strategy:</h2>
-        <ul>
-          <li>We receive your information and will schedule a follow up call to go over any questions about our service. At this time we will discuss your goals, site design, brand concerns, and responsive options.</li>
+        <ul class="strategy-ul" id="strategy-ul">
+          <li>We receive your information and will schedule a follow up call to go over any questions about our service.<br> At this time we will discuss your goals, site design, brand concerns, and responsive options.</li>
           <li>We will request any brand work, images, copy, and inspirational examples of styles you like to begin our wireframing process.</li>
           <li>Next, we will send over a site layout and request approval or revisions at this time.</li>
           <li>Over the next few weeks we will work on building your site and submit a final draft for your review.</li>
           <li>Once the final site review (includes up to 2 revisions) is completed, we will make any revisions.</li>
-          <li>Website is ready to go live, hooray!!</li>
+          <li>Website is ready to go live! Hooray!!</li>
         </ul>
         <h2>Timeline: <span id="timeline"></span></h2>
         <h2>We Would Like You to Provide:</h2>
-        <ul>
+        <ul class="provide-list" id="provide-list">
           <li>Web hosting, domain registration, SSI certificate, WHOIS Guard or similar subscription service</li>
           <li>Website copy and images (with licenses)</li>
           <li>Licenses or subscriptions for premium services per client request</li>
         </ul>
-        <div id="cost-title"><h1>Cost Breakdown</h1></div>
-          <ul id="costBreakdown">
+        <div id="cost-title-div"><h1 id="cost-title">Cost Breakdown</h1></div>
+          <ul class="costBreakdown" id="costBreakdown">
           </ul>
         <h2>Total: <span id="totalCost"></span></h2>
       </div>
