new quote in banner on about me page

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       </nav>
     </header>
     <section id="section1">
-      <h2 class="bannerquote">"The biggest mistake a small business can make is to think like a small business." - Postfilm Design</h2>
+      <h2 class="bannerquote">"When it comes to success, in our experience, the challenge is always <span id="worth-style">worth</span> it."</h2>
     </section>
     <section id="section2">
       <h1>About Desgn Worth</h1>
