--- a/quote.html
+++ b/quote.html
@@ -150,7 +150,7 @@
       <div id="nextSteps">
       </div>
     </section>
-    <div id="footer">
+    <footer id="footer">
       <img id="footerLogo" src="img/desgn-worth-logo.png" />
       <p>&copy; Desgn Worth 2017</p>
     </footer>
