created rush order calc function

--- a/quote.html
+++ b/quote.html
@@ -106,7 +106,7 @@
             <input type="products" name="products" id="products"><br/>
             <label for="products">Number of extra Course</label>
             <input type="products" name="products" id="courses"><br/>
-            <input type="checkbox" name="rush" id="rush" value="rush"><label for="rush">Is this a rush order?</label><br/>
+            <label for="rush">Project timeline in weeks:</label><input type="input" name="rush" id="rush"><br/>
             <label for="">Would you like to be contacted for:</label><br>
             <input type="checkbox" name="marketing" value="marketing"> <label for="marketing">Marketing</label>
             <input type="checkbox" name="reviewManagement" value="reviewManagement"> <label for="reviewManagement">Review Management</label>
@@ -135,7 +135,8 @@
           <li>Once the final site review (includes up to 2 revisions) is completed, we will make any revisions.</li>
           <li>Website is ready to go live! Hooray!!</li>
         </ul>
-        <h2>Timeline: <span id="timeline"></span></h2>
+        <h2>Original Timeline: <span id="timeline"></span></h2>
+        <h2>Requested Timeline: <span id="reqTimeline"></span></h2>
         <h2>We Would Like You to Provide:</h2>
         <ul class="provide-list" id="provide-list">
           <li>Web hosting, domain registration, SSI certificate, WHOIS Guard or similar subscription service</li>
