--- a/quote.html
+++ b/quote.html
@@ -106,7 +106,7 @@
             <input type="products" name="products" id="products"><br/>
             <label for="products">Number of extra Course</label>
             <input type="products" name="products" id="courses"><br/>
-            <input type="checkbox" name="rush" id="rush" value="rush"><label for="rush">Is this a rush order?</label><br/>
+            <label for="rush">Project timeline in weeks:</label><input type="input" name="rush" id="rush"><br/>
             <label for="">Would you like to be contacted for:</label><br>
             <input type="checkbox" name="marketing" value="marketing"> <label for="marketing">Marketing</label>
             <input type="checkbox" name="reviewManagement" value="reviewManagement"> <label for="reviewManagement">Review Management</label>
